--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,7 @@ html{
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important
 }
 
+
 .bg-primary {
     background-color: #349bea
 }
@@ -77,19 +78,11 @@ html{
 
 .navbar-link {
     font-size: 12px;
-    vertical-align: middle !important;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    transition-property: background,
-    border-bottom;
-    transition: 1.5s ease;
 }
 
+.navbar-link.active {
+    background : rgba(0, 0, 0, 0.06) !important;
 
-
-.active {
-    background: #fff;
-    color: #349bea;
 }
 
 @media only screen and (max-width: 600px){
